Parse CSS, change background image, create modal slider and video block

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../css/header.css"/>
-    <link rel="stylesheet" href="../css/body.css"/>
+    <link rel="stylesheet" href="../css/slider.css"/>
+    <link rel="stylesheet" href="../css/best_games_section.css"/>
+    <link rel="stylesheet" href="../css/games_catalog.css"/>
+    <link rel="stylesheet" href="../css/video_review.css"/>
+    <link rel="stylesheet" href="../css/faq.css"/>
+    <link rel="stylesheet" href="../css/feedback_form.css"/>
     <link rel="stylesheet" href="../css/modal_window.css"/>
     <link rel="stylesheet" href="../css/order.css"/>
+    <link rel="stylesheet" href="../css/body.css"/>
     <script src="../scripts/visualizer.js"></script>
     <script src="../scripts/models/games.js"></script>
     <script src="../scripts/order.js"></script>
@@ -76,8 +82,7 @@
     <div id="video_review">
         <div class="block_video_review">
             <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/mIAZReKCosc"
-                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
-                    picture-in-picture" allowfullscreen></iframe>
+                    frameborder="0" allowfullscreen></iframe>
             <div class="block_video_text">
                 <p class="headline_video"><span class="text_yellow">Fallout 76</span> Review</p>
                 <img class="video_description_line" src="../accets/images/red_line_gorizont.png">
@@ -88,8 +93,7 @@
         </div>
         <div class="block_video_review">
             <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/tCp21u6Fxjs"
-                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
-                    picture-in-picture" allowfullscreen></iframe>
+                    frameborder="0" allowfullscreen></iframe>
             <div class="block_video_text">
                 <p class="headline_video"><span class="text_yellow">Dragon Age: Inquisition
                 </span> Review</p>
@@ -174,7 +178,7 @@
     </div>
 </div>
 <div class="footer">
-    <div class="info">
+    <div class="footer_info">
         <p>2018-2019</p>
         <p class="footer_line">
         <p><span class="text_red">MADE BY</span> Pr1awrence</p>
